--- a/style.css
+++ b/style.css
@@ -781,16 +781,12 @@ background-color: #2292a7;
 
   max-width: 1800px;
   margin: 0 auto;
-  padding: 0 2rem;
-}
-
-.container-objetivo{
-display: grid;
+  padding: 0;
+  display: grid;
 
 place-items: center;
  width: 100%;
 }
-
 
 
 .objetivo-imgs{
@@ -801,7 +797,7 @@ place-items: center;
 
 .objetivo-text{
   padding: 0 2rem;
-  width: 100%;
+
 }
 
 .objetivo-text p{
