--- a/style.css
+++ b/style.css
@@ -32,9 +32,13 @@ label {
   position: fixed;
 
   height: 100%;
-z-index: -1;
+
   width: 100%;
   overflow: hidden;
+}
+
+.zindex{
+  z-index: 100;
 }
 
 .header a {
@@ -916,9 +920,7 @@ place-items: center;
   text-transform: capitalize;
 
 }
-.z-index100{
-  z-index: 100;
-}
+
 .objetivo-text h2{
   font-size: 2.4rem;
   color: var(--negro);
