--- a/style.css
+++ b/style.css
@@ -166,15 +166,14 @@ height: 30px;
   
   .container-nav {
 
-    max-width: 1600px;
+    max-width: 1900px;
     margin: 0 auto;
-    padding: 1rem .5rem;
-  
+    padding: 1rem 0;  
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
   }
   .nav a {
     display: inline;
@@ -196,18 +195,7 @@ height: 30px;
 }
 
 
-@media(min-width:1800px){
-    
-  .container-nav {
-    max-width: 1800px;
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-  }
-}
+
 
 
 .container-login a {
