--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ label {
   width: 50px;
 height: 30px;
   display: flex;
-  position: absolute;
+  position: fixed;
   top: 3.5%;
   right: 0%;
   z-index: 10000;
@@ -166,7 +166,7 @@ height: 30px;
   
   .container-nav {
 
-    max-width: 1900px;
+    max-width: 1800px;
     margin: 0 auto;
     padding: 1rem 0;  
     width: 100%;
